@@ -1,3 +1,8 @@
+2001-10-12  Miguel Sofer  <msofer@users.sourceforge.net>
+	
+	* tests/compile.test: new tests for [Bug 467523]; they are only
+	effective if TCL_MEM_DEBUG was set during compilation.
+
 2001-10-11  Miguel Sofer  <msofer@users.sourceforge.net>
 	
 	* generic/tclLiteral.c: (TclReleaseLiteral) insured that
